--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             <div class="info ">
                 <h3>Onyu Choi</h3>
                 <p>Full-stack Developer</p>
+                <p>dhsdb010@gmail.com</p>
                 <h4>Seoul, Korea / CA, USA</h4>
             </div>
         
